--- a/main.tex
+++ b/main.tex
@@ -33,13 +33,53 @@
 \section{Mathematische Grundlagen}
 
 \subsection{Grundbegriffe}
-\subsection{Beweistechniken}
-\subsection{Endliche Summen}
 
 
 \begin{definitionbox}
-Hier steht eine allgemeine Definition zu einem Konzept des jeweiligen Fachs.
+\textbf{Natürliche Zahlen $\mathbb{N}$} \\
+Alle positive ganze Zahlen (1, 2, 3, 4, 5, ...)  \\
+\\
+\textbf{Natürliche Zahlen inkl. Null $\mathbb{N}$_0} \\
+(0, 1, 2, 3, 4, 5, ...)
 \end{definitionbox}
+
+
+
+\begin{definitionbox}
+\textbf{Ganze Zahlen $\mathbb{Z}$} \\
+Alle positiven \& negativen ganzen Zahlen \& Null (..., -2, -1, 0, 1, 2, ...)
+\end{definitionbox}
+
+
+\begin{definitionbox}
+\textbf{Rationale Zahlen $\mathbb{Q}$} \\
+Nicht periodischer Bruch
+\end{definitionbox}
+
+
+\begin{definitionbox}
+\textbf{Reelle Zahlen $\mathbb{R}$} \\
+Alle bisher genannten Zahlen \\
+(Ganze Zahlen \& sämtliche Zahlen mit Nachkommastellen)
+\end{definitionbox}
+
+
+\subsection{Beweistechniken}
+\subsubsection{Direkter Beweis}
+
+\subsubsection{Beweis durch Widerspruch}
+
+\subsubsection{Beweis durch Kontraposition}
+
+\subsubsection{Beweis durch Ringschluss}
+
+\subsubsection{Beweis durch vollständige Induktion}
+
+
+\subsection{Endliche Summen}
+
+
+
 \begin{satzbox}
 Allgemeiner Satz oder Gesetzmäßigkeit des Fachs.
 \end{satzbox}
@@ -58,6 +98,13 @@ Wichtige Bemerkung oder ergänzende Informationen.
 
 
 \section{Mengen}
+
+\begin{definitionbox}
+\textbf{Menge} \\
+Unter einer Menge verstehen wir jede Zusammenfassung M von bestimmten wohlunterschiedenen Objekten m unserer Anschauung oder unseres Denkens (welche die Elemente von M genannt werden) zu einem Ganzen.
+\end{definitionbox}
+
+
 \subsection{Eigenschaften und Rechenregeln für Mengen}
 \subsection{Äquivalenzrelation}
 
