--- a/main.tex
+++ b/main.tex
@@ -3,7 +3,11 @@
 \usepackage{amsmath, amssymb, amsthm}
 \usepackage{mathtools}
 \usepackage{geometry}
+\usepackage{graphicx}
 \usepackage{tcolorbox}
+\usepackage{hyperref}
+
+% Seitenränder
 \geometry{left=2cm,right=2cm,top=2cm,bottom=2cm}
 
 % Farben für Boxen
@@ -18,44 +22,43 @@
 \newtcolorbox{beweisbox}{colback=beweiscolor, colframe=red, title=Beweis}
 \newtcolorbox{hinweisbox}{colback=hinweiscolor, colframe=orange, title=Hinweis}
 
-
-
 \begin{document}
 
-
-\title{Mathematik Grundlagen I (IMT 101)}
+\title{Zusammenfassung Mathematik Modul}
 \author{Mein Studium}
 \date{\today}
 \maketitle
 
+\tableofcontents
+\newpage
 
-%´---------------------------------------------------------
+%--------------------------------------------------------------------------
+%--------------------------------------------------------------------------
+%--------------------------------------------------------------------------
+%--------------------------------------------------------------------------
+%--------------------------------------------------------------------------
+%--------------------------------------------------------------------------
+%--------------------------------------------------------------------------
+
 \section{Mathematische Grundlagen}
+
+%--------------------------------------------------------------------------
+
 
 \subsection{Grundbegriffe}
 
-
 \begin{definitionbox}
-\textbf{Natürliche Zahlen $\mathbb{N}$} \\
-Alle positive ganze Zahlen (1, 2, 3, 4, 5, ...)  \\
-\\
-\textbf{Natürliche Zahlen inkl. Null $\mathbb{N}$_0} \\
-(0, 1, 2, 3, 4, 5, ...)
+\textbf{Natürliche Zahlen} ($\mathbb{N}$): Die Menge der positiven ganzen Zahlen: $1, 2, 3, 4, \dots$
 \end{definitionbox}
 
-
-
 \begin{definitionbox}
-\textbf{Ganze Zahlen $\mathbb{Z}$} \\
-Alle positiven \& negativen ganzen Zahlen \& Null (..., -2, -1, 0, 1, 2, ...)
+\textbf{Ganze Zahlen} ($\mathbb{Z}$): Die Menge der ganzen Zahlen: $\dots, -2, -1, 0, 1, 2, \dots$
 \end{definitionbox}
 
-
 \begin{definitionbox}
-\textbf{Rationale Zahlen $\mathbb{Q}$} \\
+\textbf{Rationale Zahlen} ($\mathbb{Q}$): Alle Zahlen, die als Bruch $\frac{p}{q}$ mit $p, q \in \mathbb{Z}, q \neq 0$ dargestellt werden können.\\
 Nicht periodischer Bruch
 \end{definitionbox}
-
 
 \begin{definitionbox}
 \textbf{Reelle Zahlen $\mathbb{R}$} \\
@@ -63,95 +66,110 @@ Alle bisher genannten Zahlen \\
 (Ganze Zahlen \& sämtliche Zahlen mit Nachkommastellen)
 \end{definitionbox}
 
-
 \subsection{Beweistechniken}
-\subsubsection{Direkter Beweis}
 
-\subsubsection{Beweis durch Widerspruch}
+\begin{satzbox}
+\textbf{Beweis durch Widerspruch} 
+\newline Angenommen, die Aussage ist falsch. Falls dies zu einem Widerspruch führt, muss die Aussage wahr sein.
+\end{satzbox}
 
-\subsubsection{Beweis durch Kontraposition}
-
-\subsubsection{Beweis durch Ringschluss}
-
-\subsubsection{Beweis durch vollständige Induktion}
-
+\begin{beweisbox}
+Angenommen, $\sqrt{2}$ ist rational, d.h. $\sqrt{2} = \frac{p}{q}$ mit $p, q \in \mathbb{Z}$ und $ggT(p,q) = 1$. Nach Quadrieren und Umformen ergibt sich ein Widerspruch. Also ist $\sqrt{2}$ irrational.
+\end{beweisbox}
 
 \subsection{Endliche Summen}
 
 
 
-\begin{satzbox}
-Allgemeiner Satz oder Gesetzmäßigkeit des Fachs.
-\end{satzbox}
-\begin{beweisbox}
-Beweismethode oder Herleitung, falls erforderlich.
-\end{beweisbox}
-\begin{hinweisbox}
-Wichtige Bemerkung oder ergänzende Informationen.
-\end{hinweisbox}
 
-
-
-
-
-
-
+%--------------------------------------------------------------------------
 
 \section{Mengen}
 
+%--------------------------------------------------------------------------
+
 \begin{definitionbox}
 \textbf{Menge} \\
-Unter einer Menge verstehen wir jede Zusammenfassung M von bestimmten wohlunterschiedenen Objekten m unserer Anschauung oder unseres Denkens (welche die Elemente von M genannt werden) zu einem Ganzen.
+Unter einer Menge verstehen wir jede Zusammenfassung M von bestimmten wohl unterschiedenen Objekten m unserer Anschauung oder unseres Denkens (welche die Elemente von M genannt werden) zu einem Ganzen.
 \end{definitionbox}
 
 
 \subsection{Eigenschaften und Rechenregeln für Mengen}
 \subsection{Äquivalenzrelation}
 
-
+%--------------------------------------------------------------------------
 
 \section{Aussagenlogik}
+
+%--------------------------------------------------------------------------
+
 \subsection{Aussagen und logische Verknüpfungen}
+
+
+\begin{definitionbox}
+\textbf{Logische Aussage} \\
+Eine logische Aussage ist ein Satz, für den entscheidbar ist, ob er wahr oder falsch ist. (true 1, false 0)
+\end{definitionbox}
+
+\begin{definitionbox}
+\textbf{Logische Äquivalenz} \\
+Seien A und B Aussagen. A and B are logisch equivalent, if they have the same truthswert. Man schreibt dafür A $\equiv$ B und sagt A ist logisch equivalent zu B
+\end{definitionbox}
+
 \subsection{Wahrheitstafeln}
 \subsection{Rechenregeln der Aussagenlogik}
 \subsection{Vereinfachung von aussagenlogischen Ausdrücken}
 
 
-
+%--------------------------------------------------------------------------
 
 \section{Zahlensysteme}
+
+%--------------------------------------------------------------------------
 \subsection{Dezimalsystem}
 \subsection{Binärsystem}
 \subsection{Hexadezimalsystem}
 
 
-
+%--------------------------------------------------------------------------
 
 \section{Abbildungen}
+
+%--------------------------------------------------------------------------
 \subsection{Abbildungen und Graphen}
 \subsection{Besondere Eigenschaften von Abbildungen}
 
 
-
+%--------------------------------------------------------------------------
 
 \section{Algebraische Grundstrukturen}
+
+%--------------------------------------------------------------------------
 \subsection{Gruppen}
 \subsection{Ringe}
 \subsection{Restklassenringe}
 
+%--------------------------------------------------------------------------
 
 \section{Primzahlen}
+
+%--------------------------------------------------------------------------
 \subsection{Definition und Eigenschaften von Primzahlen}
 \subsection{Primzahlentests}
 
+%--------------------------------------------------------------------------
 
 \section{Modulare Arithmetik}
+
+%--------------------------------------------------------------------------
 \subsection{Euklidischer Algorithmus}
 \subsection{Fundamentalansatz der Arithmetik}
 
-
+%--------------------------------------------------------------------------
 
 \section{Anwendung in der Kryptografie}
+
+%--------------------------------------------------------------------------
 \subsection{Verschiebe-Kryptosystem}
 \subsection{Symmetrische vs. asymmetrische Kryptosysteme}
 \subsection{RSA-Kryptosystem}
@@ -161,8 +179,13 @@ Unter einer Menge verstehen wir jede Zusammenfassung M von bestimmten wohlunters
 
 
 
-\section{Mathematische Symbole}
 
+%--------------------------------------------------------------------------
+%--------------------------------------------------------------------------
+%--------------------------------------------------------------------------
+%--------------------------------------------------------------------------
+
+\section{Mathematische Symbole}
 \subsection{Mengenlehre}
 \begin{itemize}
     \item Natürliche Zahlen: $\mathbb{N}$
@@ -180,7 +203,6 @@ Unter einer Menge verstehen wir jede Zusammenfassung M von bestimmten wohlunters
     \item Schnittmenge: $\cap$
     \item Differenz: $\setminus$
 \end{itemize}
-
 \subsection{Grundrechenarten und Relationen}
 \begin{itemize}
     \item Gleich: $=$
@@ -192,7 +214,6 @@ Unter einer Menge verstehen wir jede Zusammenfassung M von bestimmten wohlunters
     \item Definiert als: $\coloneqq$
     \item Unendlich: $\infty$
 \end{itemize}
-
 \subsection{Aussagenlogik}
 \begin{itemize}
     \item Nicht: $\neg$
@@ -203,14 +224,12 @@ Unter einer Menge verstehen wir jede Zusammenfassung M von bestimmten wohlunters
     \item Für alle: $\forall$
     \item Es existiert: $\exists$
 \end{itemize}
-
 \subsection{Summen, Produkte und Grenzwerte}
 \begin{itemize}
     \item Summe: $\sum_{i=1}^{n} x_i$
     \item Produkt: $\prod_{i=1}^{n} x_i$
     \item Grenzwert: $\lim_{x \to \infty}$
 \end{itemize}
-
 \subsection{Funktionen und Ableitungen}
 \begin{itemize}
     \item Funktion: $f(x)$
@@ -218,15 +237,25 @@ Unter einer Menge verstehen wir jede Zusammenfassung M von bestimmten wohlunters
     \item Integral: $\int_{a}^{b} f(x) \,dx$
 \end{itemize}
 
-
-
-
-\subsection{Subsection}
-\subsubsection{Subsubsection}
-Dies ist eine Subsubsection.
-
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.5\textwidth]{img/test.png} % Platzhalter für eine Abbildung
+    \caption{Beispiel einer Funktion}
+    \label{fig:fkt}
+\end{figure}
 
 \vfill
-\centering{\textit{(Fortsetzung auf den nächsten Karten...)} }
+\centering{\textit{Fortsetzung folgt...}}
+
+
+
+
+
+
+
+
+
+
+
 
 \end{document}
